--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "@emotion/styled": "^11.3.0",
     "framer-motion": "^4.1.17",
     "graphql-ws": "^5.5.0",
+    "native-base": "^3.1.0",
     "react-icons": "^4.2.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "^0.17.1",
+    "styled-components": "^5.3.1",
+    "styled-system": "^5.1.5",
     "uWebSockets.js": "uNetworking/uWebSockets.js#v19.3.0"
   }
 }
