--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -14,9 +14,11 @@
     "graphql-ws": "^5.5.0",
     "native-base": "^3.1.0",
     "react": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-native": "0.65.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-svg": "^12.1.1",
+    "react-native-web": "^0.17.1",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
     "uWebSockets.js": "uNetworking/uWebSockets.js#v19.3.0"
@@ -29,12 +31,14 @@
     "@types/react-native": "^0.65.0",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
+    "babel-plugin-react-native-web": "^0.17.1",
     "eslint": "^7.14.0",
     "jest": "^27.2.0",
     "metro-react-native-babel-preset": "^0.66.0",
     "react-native-codegen": "^0.0.7",
     "react-test-renderer": "17.0.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "webpack": "^5.53.0"
   },
   "resolutions": {
     "@types/react": "^17"
