--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "expo": "^42.0.4",
     "express": "^4.17.1",
     "graphql-ws": "^5.5.0",
     "native-base": "^3.1.0",
