Fixed TS error with expo by upgrading the SDK

--- a/fulcrum_gateway/app.json
+++ b/fulcrum_gateway/app.json
@@ -2,6 +2,14 @@
   "expo": {
     "name": "fulcrum_gateway",
     "slug": "fulcrum_gateway",
-    "sdkVersion": "42.0.0"
+    "web": {
+      "build": {
+        "babel": {
+          "include": [
+            "react-router-native"
+          ]
+        }
+      }
+    }
   }
 }
