--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -10,27 +10,29 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@expo/config-types": "^42.0.0",
+    "@types/react-router-native": "^5.1.1",
     "expo": "^1.0.0",
     "express": "^4.17.1",
     "graphql-ws": "^5.5.0",
     "native-base": "^3.1.0",
-    "react": "17.0.2",
-    "react-dom": "^17.0.2",
-    "react-native": "0.65.1",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-svg": "^12.1.1",
-    "react-native-web": "^0.17.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "~0.13.12",
     "react-router-native": "^5.2.1",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
     "uWebSockets.js": "uNetworking/uWebSockets.js#v19.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "~7.9.0",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.65.0",
+    "@types/react-native": "~0.63.2",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
     "babel-plugin-react-native-web": "^0.17.1",
@@ -39,8 +41,7 @@
     "metro-react-native-babel-preset": "^0.66.0",
     "react-native-codegen": "^0.0.7",
     "react-test-renderer": "17.0.2",
-    "typescript": "^3.8.3",
-    "webpack": "^5.53.0"
+    "typescript": "~4.0.0"
   },
   "resolutions": {
     "@types/react": "^17"
