--- a/fulcrum_gateway/tsconfig.json
+++ b/fulcrum_gateway/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": [
       "es2017"
     ],
+    "noImplicitAny": true,
     "allowJs": true,
     "jsx": "react-native",
     "noEmit": true,
@@ -22,5 +23,5 @@
     "metro.config.js",
     "jest.config.js"
   ],
-  "extends": "expo/tsconfig.base"
+  "extends": ".expo/tsconfig.base"
 }
