--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -16,9 +16,9 @@
     "express": "^4.17.1",
     "graphql-ws": "^5.5.0",
     "native-base": "^3.1.0",
-    "react": "16.13.1",
+    "react": "17.0.2",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "0.65.1",
     "react-native-safe-area-context": "3.2.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
