--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -17,7 +17,7 @@
     "graphql-ws": "^5.5.0",
     "native-base": "^3.1.0",
     "react": "17.0.2",
-    "react-dom": "16.13.1",
+    "react-dom": "^17.0.2",
     "react-native": "0.65.1",
     "react-native-safe-area-context": "3.2.0",
     "react-native-svg": "12.1.1",
