--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@expo/config-types": "^42.0.0",
+    "@react-navigation/native": "^6.0.4",
+    "@react-navigation/native-stack": "^6.2.2",
     "@types/react-router-native": "^5.1.1",
     "expo": "^42.0.4",
     "express": "^4.17.1",
@@ -20,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-native": "0.65.1",
     "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "^3.8.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12",
     "react-router-native": "^5.2.1",
