--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -39,6 +39,7 @@
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
     "babel-plugin-react-native-web": "^0.17.1",
+    "cors": "^2.8.5",
     "eslint": "^7.14.0",
     "jest": "^27.2.0",
     "metro-react-native-babel-preset": "^0.66.0",
