--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.2.2",
     "@types/react-router-native": "^5.1.1",
     "expo": "^43.0.1",
+    "expo-cli": "^4.12.10",
     "express": "^4.17.1",
     "graphql-ws": "^5.5.0",
     "native-base": "^3.2.1",
