--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -15,13 +15,17 @@
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "@types/react-router-native": "^5.1.1",
-    "expo": "^43.0.1",
-    "expo-cli": "^4.12.10",
+    "expo": "^1.0.0",
+    "expo-cli": "^4.12.11",
     "express": "^4.17.1",
     "graphql-ws": "^5.5.0",
+    "i18next": "^21.4.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.1",
     "native-base": "^3.2.1",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.13.0",
     "react-native": "^0.66.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.3",
