--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/config-types": "^42.0.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
