--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -22,7 +22,8 @@
     "expo-cli": "^4.12.12",
     "expo-font": "~10.0.3",
     "express": "^4.17.1",
-    "graphql-ws": "^5.5.0",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.3.0",
     "i18next": "^21.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
