--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.0",
     "@expo/config-types": "^42.0.0",
+    "@graphql-tools/schema": "^8.3.1",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.4",
@@ -24,6 +25,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
+    "graphql-tools": "^8.2.0",
     "i18next": "^21.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
