--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -60,6 +60,7 @@
     "metro-react-native-babel-preset": "^0.66.0",
     "react-native-codegen": "^0.0.0",
     "react-test-renderer": "17.0.2",
+    "ts-node": "^10.4.0",
     "typescript": "~4.0.0"
   },
   "resolutions": {
