--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -17,9 +17,9 @@
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
     "@types/react-router-native": "^5.1.1",
-    "expo": "^1.0.0",
+    "expo": "^43.0.2",
     "expo-barcode-scanner": "~11.1.2",
-    "expo-cli": "^4.3.0",
+    "expo-cli": "^4.12.12",
     "expo-font": "~10.0.3",
     "express": "^4.17.1",
     "graphql-ws": "^5.5.0",
@@ -30,8 +30,9 @@
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.13.0",
-    "react-native": "^0.61.4",
+    "react-native": "^0.66.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.10.1",
     "react-native-paper-dates": "^0.7.0",
     "react-native-reanimated": "^2.2.3",
     "react-native-safe-area-context": "3.2.0",
