--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -38,6 +38,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.8.0",
     "react-native-svg": "^9.12.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-native-web": "^0.17.5",
     "react-router-native": "^5.2.1",
     "styled-components": "^5.3.1",
