--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -52,6 +52,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/node": "^16.11.9",
     "@types/react-native": "~0.63.2",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.3.1",
@@ -60,6 +61,7 @@
     "eslint": "^7.14.0",
     "jest": "^27.2.0",
     "metro-react-native-babel-preset": "^0.66.0",
+    "prisma": "^3.5.0",
     "react-native-codegen": "^0.0.0",
     "react-test-renderer": "17.0.2",
     "ts-node": "^10.4.0",
