--- a/fulcrum_gateway/tsconfig.json
+++ b/fulcrum_gateway/tsconfig.json
@@ -3,8 +3,10 @@
     "target": "esnext",
     "module": "commonjs",
     "lib": [
-      "es2017"
+      "esnext"
     ],
+    "sourceMap": true,
+    "outDir": "dist",
     "noImplicitAny": true,
     "allowJs": true,
     "jsx": "react-native",
