--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -61,6 +61,7 @@
     "eslint": "^7.14.0",
     "jest": "^27.2.0",
     "metro-react-native-babel-preset": "^0.66.0",
+    "nodemon": "^2.0.15",
     "prisma": "^3.5.0",
     "react-native-codegen": "^0.0.0",
     "react-test-renderer": "17.0.2",
