--- a/fulcrum_gateway/tsconfig.json
+++ b/fulcrum_gateway/tsconfig.json
@@ -7,17 +7,23 @@
     ],
     "sourceMap": true,
     "outDir": "dist",
-    "noImplicitAny": true,
     "allowJs": true,
     "jsx": "react-native",
     "noEmit": true,
     "isolatedModules": true,
     "strict": true,
+    "noImplicitAny": true,
+    "noImplicitThis": false,
+    "strictNullChecks": true,
+    "alwaysStrict": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "skipLibCheck": false,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": false
   },
   "exclude": [
     "node_modules",
