--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -13,6 +13,7 @@
     "@expo-google-fonts/poppins": "^0.2.0",
     "@expo/config-types": "^42.0.0",
     "@graphql-tools/schema": "^8.3.1",
+    "@prisma/client": "^3.6.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.4",
