--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
+    "@types/graphql-fields": "^1.3.4",
     "@types/react-router-native": "^5.1.1",
     "class-validator": "^0.13.2",
     "expo": "^43.0.2",
@@ -27,6 +28,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.13.6",
     "graphql-tools": "^8.2.0",
     "i18next": "^21.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
@@ -48,8 +51,8 @@
     "reflect-metadata": "^0.1.13",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
+    "tslib": "^2.3.1",
     "type-graphql": "^1.1.1",
-    "typegraphql-prisma": "^0.18.1",
     "uWebSockets.js": "uNetworking/uWebSockets.js#v19.3.0"
   },
   "devDependencies": {
@@ -67,10 +70,11 @@
     "jest": "^27.2.0",
     "metro-react-native-babel-preset": "^0.66.0",
     "nodemon": "^2.0.15",
-    "prisma": "^3.5.0",
+    "prisma": "^3.6.0",
     "react-native-codegen": "^0.0.0",
     "react-test-renderer": "17.0.2",
     "ts-node": "^10.4.0",
+    "typegraphql-prisma": "^0.18.1",
     "typescript": "~4.0.0"
   },
   "resolutions": {
