--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -23,12 +23,14 @@
     "@types/graphql-fields": "^1.3.4",
     "@types/react-router-native": "^5.1.1",
     "class-validator": "^0.13.2",
+    "connect-redis": "^6.0.0",
     "expo": "^43.0.2",
     "expo-barcode-scanner": "~11.1.2",
     "expo-cli": "^4.12.12",
     "expo-font": "~10.0.3",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "express-session": "^1.17.2",
     "graphql": "^15.3.0",
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.13.6",
@@ -51,6 +53,7 @@
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "^0.17.5",
     "react-router-native": "^5.2.1",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5",
@@ -63,6 +66,8 @@
     "@babel/runtime": "^7.12.5",
     "@prisma/client": "^3.6.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/connect-redis": "^0.0.18",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "^26.0.23",
     "@types/node": "^16.11.9",
     "@types/react-native": "~0.63.2",
