--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^6.2.2",
     "@types/graphql-fields": "^1.3.4",
     "@types/react-router-native": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.2",
     "connect-redis": "^6.0.0",
     "expo": "^43.0.2",
@@ -66,6 +67,7 @@
     "@babel/runtime": "^7.12.5",
     "@prisma/client": "^3.6.0",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.18",
     "@types/express-session": "^1.17.4",
     "@types/jest": "^26.0.23",
