--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.2",
     "connect-redis": "^6.0.0",
+    "dotenv": "^10.0.0",
     "expo": "^43.0.2",
     "expo-barcode-scanner": "~11.1.2",
     "expo-cli": "^4.12.12",
