--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -40,6 +40,7 @@
     "i18next": "^21.4.0",
     "i18next-browser-languagedetector": "^6.1.2",
     "i18next-http-backend": "^1.3.1",
+    "ioredis": "^4.28.2",
     "native-base": "^3.2.1",
     "nodemailer": "^6.7.2",
     "react": "17.0.2",
@@ -73,6 +74,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.18",
     "@types/express-session": "^1.17.4",
+    "@types/ioredis": "^4.28.7",
     "@types/jest": "^26.0.23",
     "@types/node": "^16.11.9",
     "@types/nodemailer": "^6.4.4",
