Added basic error screen to navigation (new dependencies and updated expo cli)

--- a/fulcrum_gateway/app.json
+++ b/fulcrum_gateway/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "fulcrum_gateway",
     "slug": "fulcrum_gateway",
+    "scheme": "fiefoe",
     "privacy": "public",
     "icon": "./src/assets/images/test-tube.png",
     "web": {
