--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -30,6 +30,7 @@
     "expo-barcode-scanner": "~11.1.2",
     "expo-cli": "^4.12.12",
     "expo-font": "~10.0.3",
+    "expo-linking": "~2.4.2",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
@@ -73,6 +74,7 @@
     "@types/express-session": "^1.17.4",
     "@types/jest": "^26.0.23",
     "@types/node": "^16.11.9",
+    "@types/react-dom": "^17.0.11",
     "@types/react-native": "~0.63.2",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^27.3.1",
