--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -30,6 +30,7 @@
     "expo-barcode-scanner": "~11.1.2",
     "expo-cli": "^4.12.12",
     "expo-font": "~10.0.3",
+    "expo-linking": "~2.4.2",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
@@ -62,8 +63,8 @@
     "styled-system": "^5.1.5",
     "tslib": "^2.3.1",
     "type-graphql": "^1.1.1",
-    "uuid": "^8.3.2",
-    "uWebSockets.js": "uNetworking/uWebSockets.js#v19.3.0"
+    "uWebSockets.js": "uNetworking/uWebSockets.js#v19.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
