--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -48,7 +48,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.13.0",
     "react-native": "^0.66.1",
-    "react-native-gesture-handler": "^1.10.3",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.10.1",
     "react-native-paper-dates": "^0.7.0",
     "react-native-reanimated": "^2.2.3",
