--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^6.2.2",
     "@types/graphql-fields": "^1.3.4",
     "@types/react-router-native": "^5.1.1",
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.2",
     "connect-redis": "^6.0.0",
