--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.13.0",
     "react-native": "^0.66.1",
+    "react-native-confirmation-code-field": "^7.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.10.1",
     "react-native-paper-dates": "^0.7.0",
