--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -88,12 +88,13 @@
     "babel-plugin-react-native-web": "^0.17.1",
     "cors": "^2.8.5",
     "eslint": "^7.32.0",
-    "jest": "^27.2.0",
+    "jest": "^27.4.7",
     "metro-react-native-babel-preset": "^0.66.0",
     "nodemon": "^2.0.15",
     "prisma": "^3.6.0",
     "react-native-codegen": "^0.0.0",
     "react-test-renderer": "17.0.2",
+    "supertest": "^6.2.1",
     "ts-node": "^10.4.0",
     "typegraphql-prisma": "^0.18.2",
     "typescript": "~4.5.2"
