--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "prisma": {
@@ -78,11 +78,12 @@
     "@types/connect-redis": "^0.0.18",
     "@types/express-session": "^1.17.4",
     "@types/ioredis": "^4.28.7",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.4.0",
     "@types/node": "^16.11.9",
     "@types/nodemailer": "^6.4.4",
     "@types/react-native": "~0.63.2",
     "@types/react-test-renderer": "^17.0.1",
+    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.3",
     "babel-jest": "^27.3.1",
     "babel-plugin-react-native-web": "^0.17.1",
@@ -95,22 +96,12 @@
     "react-native-codegen": "^0.0.0",
     "react-test-renderer": "17.0.2",
     "supertest": "^6.2.1",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typegraphql-prisma": "^0.18.2",
     "typescript": "~4.5.2"
   },
   "resolutions": {
     "@types/react": "^17"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
   }
 }
