--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed/seed.ts"
+    "seed": "ts-node src/api/seed/seed.ts"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.0",
