--- a/fulcrum_gateway/package.json
+++ b/fulcrum_gateway/package.json
@@ -66,8 +66,7 @@
     "tslib": "^2.3.1",
     "twilio": "^3.72.0",
     "type-graphql": "^1.1.1",
-    "uuid": "^8.3.2",
-    "uWebSockets.js": "uNetworking/uWebSockets.js#v19.3.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
