--- a/fulcrum/package.json
+++ b/fulcrum/package.json
@@ -4,12 +4,24 @@
   "private": true,
   "scripts": {
     "test": "jest --detectOpenHandles --testPathPattern=api/tests",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "start": "node_modules/ts-node/dist/bin.js index.ts"
   },
   "prisma": {
     "seed": "ts-node api/seed/seed.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "@babel/core": "~7.9.0",
+    "@babel/runtime": "^7.12.5",
+    "@prisma/client": "^3.6.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.18",
+    "@types/express-session": "^1.17.4",
+    "@types/ioredis": "^4.28.7",
+    "@types/uuid": "^8.3.3",
+    "@types/node": "^16.11.9",
+    "@types/nodemailer": "^6.4.4",
     "@graphql-tools/schema": "^8.3.1",
     "@types/graphql-fields": "^1.3.4",
     "axios": "^0.24.0",
@@ -30,31 +42,20 @@
     "tslib": "^2.3.1",
     "twilio": "^3.72.0",
     "type-graphql": "^1.1.1",
-    "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@babel/runtime": "^7.12.5",
-    "@prisma/client": "^3.6.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/connect-redis": "^0.0.18",
-    "@types/express-session": "^1.17.4",
-    "@types/ioredis": "^4.28.7",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.9",
-    "@types/nodemailer": "^6.4.4",
-    "@types/supertest": "^2.0.11",
-    "@types/uuid": "^8.3.3",
-    "babel-jest": "^27.3.1",
-    "cors": "^2.8.5",
-    "eslint": "^7.32.0",
-    "jest": "^27.4.7",
-    "nodemon": "^2.0.15",
-    "prisma": "^3.6.0",
-    "supertest": "^6.2.1",
-    "ts-jest": "^27.1.3",
+    "uuid": "^8.3.2",
     "ts-node": "^10.4.0",
     "typegraphql-prisma": "^0.18.2",
-    "typescript": "~4.5.2"
+    "typescript": "~4.5.2",
+    "prisma": "^3.6.0",
+    "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "@types/supertest": "^2.0.11",
+    "babel-jest": "^27.3.1",
+    "eslint": "^7.32.0",
+    "jest": "^27.4.7",
+    "supertest": "^6.2.1",
+    "ts-jest": "^27.1.3"
   }
 }
