--- a/gateway/package.json
+++ b/gateway/package.json
@@ -23,12 +23,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.3",
+    "react-native": "^0.67.1",
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-reanimated": "^2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.5"
   },
   "devDependencies": {
     "@types/react": "~17.0.21",
