--- a/gateway/tsconfig.json
+++ b/gateway/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "lib": [
       "es2019",
-      "esnext.asynciterable"
+      "esnext.asynciterable",
+      "dom"
     ],
     "sourceMap": true,
     "outDir": "dist",
