--- a/gateway/package.json
+++ b/gateway/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react-native": "^0.64.23",
     "metro": "^0.66.2",
     "metro-core": "^0.66.2",
     "typescript": "~4.3.5"
