--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,10 +17,19 @@ jobs:
       run:
         working-directory: fulcrum
     env:
+      FRONTEND_LOCAL_URL: ${{secrets.FRONTEND_LOCAL_URL}}
+      FRONTEND_PROD_URL: ${{secrets.FRONTEND_PROD_URL}}
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
       REDIS_URL: ${{ secrets.REDIS_URL }}
       NODE_ENV: ${{ secrets.NODE_ENV }}
       SESSION_SECRET: ${{ secrets.SESSION_SECRET }}
+      SENDER_EMAIL: ${{secrets.SENDER_EMAIL}}
+      SMTP_PASSWORD: ${{secrets.SMTP_PASSWORD}}
+      SMTP_SERVER: ${{secrets.SMTP_SERVER}}
+      SMTP_USERNAME: ${{secrets.SMTP_USERNAME}}
+      TWILIO_ACCOUNT_SID: ${{secrets.TWILIO_ACCOUNT_SID}}
+      TWILIO_AUTH_TOKEN: ${{secrets.TWILIO_AUTH_TOKEN}}
+      TWILIO_PHONE_NUMBER: ${{secrets.TWILIO_PHONE_NUMBER}}
 
     strategy:
       matrix:
