--- a/fulcrum/package.json
+++ b/fulcrum/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "test": "jest --detectOpenHandles --testPathPattern=api/tests --runInBand",
+    "test": "jest --detectOpenHandles --testPathPattern=api/tests --runInBand --forceExit",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "start": "node_modules/ts-node/dist/bin.js index.ts"
   },
@@ -11,23 +11,23 @@
     "seed": "ts-node api/seed/seed.ts"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "@babel/core": "~7.9.0",
     "@babel/runtime": "^7.12.5",
+    "@graphql-tools/schema": "^8.3.1",
     "@prisma/client": "^3.6.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.18",
     "@types/express-session": "^1.17.4",
+    "@types/graphql-fields": "^1.3.4",
     "@types/ioredis": "^4.28.7",
-    "@types/uuid": "^8.3.3",
     "@types/node": "^16.11.9",
     "@types/nodemailer": "^6.4.4",
-    "@graphql-tools/schema": "^8.3.1",
-    "@types/graphql-fields": "^1.3.4",
+    "@types/uuid": "^8.3.3",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.13.2",
     "connect-redis": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
@@ -37,17 +37,18 @@
     "graphql-scalars": "^1.13.6",
     "graphql-tools": "^8.2.0",
     "ioredis": "^4.28.2",
+    "messagebird": "^3.7.2",
     "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
+    "prisma": "^3.6.0",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.4.0",
     "tslib": "^2.3.1",
     "twilio": "^3.72.0",
     "type-graphql": "^1.1.1",
-    "uuid": "^8.3.2",
-    "ts-node": "^10.4.0",
     "typegraphql-prisma": "^0.18.2",
     "typescript": "~4.5.2",
-    "prisma": "^3.6.0",
-    "nodemon": "^2.0.15"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
