--- a/fulcrum/package.json
+++ b/fulcrum/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
+    "express-rate-limit": "^6.2.1",
     "express-session": "^1.17.2",
     "graphql": "^15.3.0",
     "graphql-fields": "^2.0.3",
