--- a/gateway/package.json
+++ b/gateway/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^6.2.5",
     "expo": "^44.0.5",
     "expo-barcode-scanner": "~11.2.0",
+    "expo-camera": "~12.1.2",
     "expo-font": "~10.0.4",
     "expo-linking": "^3.0.0",
     "i18next": "^21.6.7",
