--- a/fulcrum/package.json
+++ b/fulcrum/package.json
@@ -25,6 +25,7 @@
     "@types/uuid": "^8.3.3",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.2",
     "class-validator": "^0.13.2",
     "connect-redis": "^6.0.0",
     "cors": "^2.8.5",
@@ -39,11 +40,12 @@
     "graphql-tools": "^8.2.0",
     "ioredis": "^4.28.2",
     "messagebird": "^3.7.2",
+    "node-fetch": "^2.6.7",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "prisma": "^3.6.0",
     "reflect-metadata": "^0.1.13",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.7.0",
     "tslib": "^2.3.1",
     "twilio": "^3.72.0",
     "type-graphql": "^1.1.1",
