--- a/gateway/package.json
+++ b/gateway/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "predeploy": "expo build:web",
-    "deploy-hosting": "npm run predeploy && firebase deploy --only hosting"
+    "deploy-hosting": "npm run predeploy && firebase deploy --only hosting",
+    "storybook": "start-storybook -p 7007",
+    "build-storybook": "build-storybook"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +18,8 @@
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@storybook/addon-docs": "^6.5.9",
+    "@storybook/react": "^6.5.9",
     "expo": "^44.0.5",
     "expo-barcode-scanner": "~11.2.0",
     "expo-camera": "~12.1.2",
@@ -28,7 +32,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.3",
-    "react-native": "^0.67.1",
+    "react-native": "^0.67.4",
     "react-native-confirmation-code-field": "^7.3.0",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-reanimated": "^2.3.1",
@@ -38,9 +42,18 @@
     "react-native-web": "0.17.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.9",
+    "@storybook/addon-actions": "^5.3",
+    "@storybook/addon-knobs": "^5.3",
+    "@storybook/addon-links": "^5.3",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.26",
+    "@storybook/react-native": "^5.3.25",
+    "@storybook/react-native-server": "^5.3.23",
     "@types/node": "^17.0.18",
     "@types/react": "~17.0.21",
     "@types/react-native": "^0.64.23",
+    "babel-loader": "^8.2.5",
     "metro": "^0.66.2",
     "metro-core": "^0.66.2",
     "typescript": "~4.3.5"
